rust/node-structuring/tests/snapshots/examples__sections-to-abstract-none.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This should NOT be an abstract because there is no abstract heading."
          }
        }
      ]
    }
  ]
}
