rust/node-structuring/tests/snapshots/examples__sections-to-abstract-simple.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "abstract": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This should be the abstract and this and the above heading should be removed from the content."
          }
        }
      ]
    }
  ],
  "content": [
    {
      "type": "Heading",
      "level": 2,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Introduction"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This and the above heading should remain in the heading."
          }
        }
      ]
    }
  ]
}
