rust/node-structuring/tests/snapshots/examples__sections-to-keywords-simple.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Article with a keywords section."
          }
        }
      ]
    }
  ],
  "keywords": [
    "machine learning",
    "artificial intelligence",
    "neural networks",
    "deep learning"
  ]
}
