rust/node-structuring/tests/snapshots/examples__sections-to-references-paras-content-after.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "references": [
    {
      "type": "Reference",
      "id": "smith-2023",
      "workType": "Book",
      "authors": [
        {
          "type": "Person",
          "familyNames": [
            "Smith"
          ],
          "givenNames": [
            "J"
          ]
        }
      ],
      "date": {
        "type": "Date",
        "value": "2023"
      },
      "title": [
        {
          "type": "Text",
          "value": {
            "string": "Machine Learning Fundamentals"
          }
        }
      ],
      "publisher": {
        "type": "Organization",
        "name": "Tech Publishing"
      }
    },
    {
      "type": "Reference",
      "id": "jones-and-brown-2022",
      "workType": "Book",
      "authors": [
        {
          "type": "Person",
          "familyNames": [
            "Jones"
          ],
          "givenNames": [
            "A"
          ]
        },
        {
          "type": "Person",
          "familyNames": [
            "Brown"
          ],
          "givenNames": [
            "B"
          ]
        }
      ],
      "date": {
        "type": "Date",
        "value": "2022"
      },
      "title": [
        {
          "type": "Text",
          "value": {
            "string": "Data Analysis Methods"
          }
        }
      ],
      "publisher": {
        "type": "Organization",
        "name": "Science Press"
      }
    }
  ],
  "content": [
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Introduction"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Article with references (as paragraphs) followed by other content that should not be treated as references."
          }
        }
      ]
    },
    {
      "type": "Table",
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "cellType": "HeaderCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Column 1"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "cellType": "HeaderCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Column 2"
                      }
                    }
                  ]
                }
              ]
            }
          ],
          "rowType": "HeaderRow"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Data"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "type": "TableCell",
              "content": [
                {
                  "type": "Paragraph",
                  "content": [
                    {
                      "type": "Text",
                      "value": {
                        "string": "Values"
                      }
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This paragraph should NOT be treated as a reference because it comes after a table."
          }
        }
      ]
    }
  ]
}
